--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Title</title>
   <!-- css files -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="csss/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/flexbox.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
