added custom frameworks and libraries

--- a/index.html
+++ b/index.html
@@ -7,27 +7,87 @@
   <!-- mobile responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-	<title>Title</title>
+	<title>Sample Site</title>
   <!-- css files -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="csss/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/flexbox.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/flexbox.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
-  <nav></nav>
-  <header></header>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span id="top-menu">MENU</span>
+          <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#scrollTop">Brand</a>
+      </div>
 
-  <section></section>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        
+        <ul class="nav navbar-nav navbar-right">
+          <li><a class="scrollTo" href="#one">Section one</a></li>
+          <li><a class="scrollTo" href="#two">Section two</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  
+  <header>
+    <div class="content flex-center-elements column">
+      <div>
+        <h1>Startup technological freelancer</h1>
+        <hr>
+        <p>We are freelancers working in webdevelopment</p>
+        
+      </div>
+      <a id="down-btn" class="scrollTo" href="#one"><span class="glyphicon glyphicon-chevron-down"></span></a>
+    </div>
+  </header>
+
+  <section id="one">
+    <div class="content flex-center-elements">
+      <div>
+        <h1>Startup technological freelancer</h1>
+        <hr>
+        <p>This is section one</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="two">
+    <div class="content flex-center-elements">
+      <div>
+        <h1>Startup technological freelancer</h1>
+        <hr>
+        <p>This is section two</p>
+      </div>
+    </div>
+  </section>
 
   <footer></footer>
 
 <!-- js files -->
   <script src="js/jquery-3.1.0.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
