--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         <p>We are freelancers working in webdevelopment</p>
         
       </div>
-      <a id="down-btn" class="scrollTo" href="#one"><span class="glyphicon glyphicon-chevron-down"></span></a>
+      <a id="down-btn" class="scrollTo" href="#one">
+        <span class="glyphicon glyphicon-chevron-down animated infinite bounce"></span>
+      </a>
     </div>
   </header>
 
