added new layout parts

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="scrollTo" href="#one">Section one</a></li>
-          <li><a class="scrollTo" href="#two">Section two</a></li>
+          <li><a class="scrollTo" href="#services">Services</a></li>
+          <li><a class="scrollTo" href="#services">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -52,40 +52,94 @@
   </nav>
   
   <header>
-    <div class="content flex-center-elements column">
+    <div class="content flex justify-center align-center column">
       <div>
         <h1>Startup technological freelancer</h1>
         <hr>
         <p>We are freelancers working in webdevelopment</p>
         
       </div>
-      <a id="down-btn" class="scrollTo" href="#one">
+      <a id="down-btn" class="scrollTo" href="#services">
         <span class="glyphicon glyphicon-chevron-down animated infinite bounce"></span>
       </a>
     </div>
   </header>
 
-  <section id="one">
-    <div class="content flex-center-elements">
+  <section id="services">
+    <div class="content flex align-center column">
       <div>
-        <h1>Startup technological freelancer</h1>
+        <h2>Our services</h2>
         <hr>
-        <p>This is section one</p>
+      </div>
+
+      <div class="sub-content flex wrap justify-center">
+
+        <div class="service flex justify-center align-center column">
+          <div class="icon">
+            <i class="fa fa-pencil fa-4x"></i>
+            <i class="fa fa-code fa-4x"></i>
+          </div>
+          <p>Web Design &</p>
+          <p>Development</p>
+        </div>
+
+        <div class="service flex justify-center align-center column">
+          <div class="icon">
+            <i class="fa fa-desktop fa-4x"></i>
+            <i class="fa fa-mobile fa-4x"></i>
+          </div>
+          <p>Desktop &</p>
+          <p>Mobile UX</p>
+        </div>
+
+        <div class="service flex justify-center align-center column">
+          <div class="icon">
+            <i class="fa fa-desktop fa-4x"></i>
+            <i class="fa fa-mobile fa-4x"></i>
+          </div>
+          <p>Desktop &</p>
+          <p>Mobile UX</p>
+        </div>        
+
       </div>
     </div>
   </section>
-
-  <section id="two">
-    <div class="content flex-center-elements">
+  
+  <section id="about">
+    <div class="content flex justify-center">
       <div>
-        <h1>Startup technological freelancer</h1>
+        <h2>About Us</h2>
         <hr>
         <p>This is section two</p>
       </div>
     </div>
   </section>
 
-  <footer></footer>
+  <section id="social">
+    <div class="content flex justify-center">
+      <div>
+        <h2>Startup technological freelancer</h2>
+        <hr>
+        <p>This is section two</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="content flex justify-center">
+      <div>
+        <h2>Contact Us</h2>
+        <hr>
+        <p>We're available for freelance work, let us hear about your projects.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="content">
+      <div><p>&copy; 2016 CompanyName. All Rights Reserved</p></div>
+    </div>
+  </footer>
 
 <!-- js files -->
   <script src="js/jquery-3.1.0.min.js"></script>
