changed infor and css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <ul class="nav navbar-nav navbar-right">
           <li><a class="scrollTo" href="#services">Services</a></li>
-          <li><a class="scrollTo" href="#services">Contact</a></li>
+          <li><a class="scrollTo" href="#contact">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -97,20 +97,25 @@
             <i class="fa fa-desktop fa-4x"></i>
             <i class="fa fa-mobile fa-4x"></i>
           </div>
-          <p>Desktop &</p>
-          <p>Mobile UX</p>
-        </div>        
+          <p>Animations</p>
+          <p>for the web</p>
+        </div>
 
       </div>
     </div>
   </section>
   
   <section id="about">
-    <div class="content flex justify-center">
+    <div class="content flex justify-center column">
       <div>
         <h2>About Us</h2>
         <hr>
-        <p>This is section two</p>
+        <p>A little about me</p>
+      </div>
+      <div class="text-box">
+        <p>I live in Braga, a beautifull city.</p>
+        <p>In the last year I learned how to code at Creators School, a 2 week course that took place in Oporto, and after that I've been working in development and front-end projects.</p>
+        <p>I used to work as a Designer but when I started my own startups I felt the need to read and learn a bit about programming, when my last project became unsustainable I decided to learn how to build my own products and prototypes. </p>
       </div>
     </div>
   </section>
@@ -118,20 +123,25 @@
   <section id="social">
     <div class="content flex justify-center">
       <div>
-        <h2>Startup technological freelancer</h2>
+        <h2>Social networking</h2>
         <hr>
-        <p>This is section two</p>
+        <p>Find us here</p>
       </div>
     </div>
   </section>
 
   <section id="contact">
-    <div class="content flex justify-center">
+    <div class="content flex justify-center column">
       <div>
         <h2>Contact Us</h2>
         <hr>
         <p>We're available for freelance work, let us hear about your projects.</p>
       </div>
+
+      <div class="flex justify-center">
+        <a href="mailto:angelusdelmar@gmail.com" target="_blank"><i class="fa fa-send fa-3x"></i></a>
+      </div>
+
     </div>
   </section>
 
