--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <hr>
       </div>
 
-      <div class="sub-content flex wrap justify-center">
+      <div class="flex wrap justify-center">
 
         <div class="service flex justify-center align-center column">
           <div class="icon">
@@ -135,11 +135,12 @@
       <div>
         <h2>Contact Us</h2>
         <hr>
-        <p>We're available for freelance work, let us hear about your projects.</p>
       </div>
 
-      <div class="flex justify-center">
+      <div class="flex justify-center align-center column">
+        <p>We're available for freelance work, let us hear about your projects.</p>
         <a href="mailto:angelusdelmar@gmail.com" target="_blank"><i class="fa fa-send fa-3x"></i></a>
+        <p>email</p>   
       </div>
 
     </div>
@@ -147,6 +148,9 @@
 
   <footer>
     <div class="content">
+      <a href=""><i class="fa fa-twitter fa-2x"></i></a>
+      <a href=""><i class="fa fa-github-alt fa-2x"></i></a>
+      <a href=""><i class="fa fa-linkedin fa-2x"></i></a>
       <div><p>&copy; 2016 CompanyName. All Rights Reserved</p></div>
     </div>
   </footer>
